2008-08-16  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/setenv.txt: Add environment variable PYTHON_DIR 
	* windows-vc2005/OBPython/*: Update the Python build so that it
	automatically creates a Python distribution.

2008-08-16  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/setenv.txt: Add environment variable CSHARP required
	for compiling the .NET bindings
	* windows-vc2005/OBCSharp/*: Update the CSharp build so that it
	automatically creates the OBDotNet.dll assembly (namespace OpenBabel)
	(thanks to Matt Sprague for the command line)

2008-08-16  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/setenv.txt: Sets some environment variables needed
	for compiling the SWIG bindings, and then starts OpenBabelOBF.sln. The
	user should copy setenv.txt to setenv.bat locally before editing the
	variable values.
	* windows-vc2005/OBJava/*: Update the Java build so that it generates
	a jar file with the correct org/openbabel structure.

2008-08-15  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/Makefile.am: Correct errors in generation of jar file

2008-08-15  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/openbabel.sln: Removed from repository
	* windows-vc2005/*/*.vcproj: Set optimization to /O2 and whole program
	optimization to true

2008-08-14  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/Makefile.am: Generate a jar file for the Java SWIG bindings
	* scripts/java/README, OBTest.java: Updated

2008-07-19  Michael Banck  <mbanck@gmx.net>

	* src/formats/opendxformat.cpp: Rename theGaussianCubeFormat global
	variable to theOpenDXCubeFormat.

	* src/formats/CMakeLists.txt: Added opendxformat to formats.

2008-07-11  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-ruby.i: Updated the interface file to allow access
	to OBFingerprint. Needed to ignore DescribeBits, which was causing
	problems.

2008-07-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/fingerprint.h, src/fingerprint.cpp: Make